# mini-jarvis

./: .gitignore  README.md  config.example.toml  pyproject.toml
.github/workflows/: ci.yml
mini_jarvis/: __init__.py  audio.py  config.py  hermes_bridge.py  main.py  player.py  session.py  stt.py  tts.py  tts_minimax.py  vad.py  wake_word.py
skills/hermes-bridge/: SKILL.md
skills/minimax-tts/: SKILL.md
skills/voice-session/: SKILL.md
tests/: test_core.py
